fixed some UI issues and refactored strings into the strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">bitcoin_price_check</string>
+    <string name="bitcoinLogo">₿</string>
+    <string name="current_bitcoin_price">Current Bitcoin Price:</string>
+    <string name="refreshButton">Refresh</string>
+    <string name="_00000_0000">USD $00000.0000</string>
 </resources>
